media/error_tc/error_266.txt
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_s9aa5GR.cpp: In function 'int main()':
G:\SEM-7\ADF\FINAL PROJECT\AlgoBooth\media\source_codes/code_s9aa5GR.cpp:8:1: error: expected ';' before '}' token
 }
 ^
